# FreeWill

./: .gitmodules  CMakeLists.txt  FreeWill.pro  README.md  deepreinforce_1_9_19999.sav  deepreinforce_1_9_22617.sav  deepreinforce_1_9_39999.sav
Demos/: CMakeLists.txt
Demos/LeNet/: CMakeLists.txt  LeNet.cpp
Demos/MNIST/: CMakeLists.txt  DemoBase.cpp  DemoBase.h  DemoUI.cpp  DemoUI.h  MNIST.cpp  MNIST.h  MNISTConvNetCPU.cpp  MNISTConvNetCPUModel.cpp  MNISTConvNetGPU.cpp  MNISTFullyConnectedCPU.cpp  MNISTFullyConnectedCPUModel.cpp  MNISTFullyConnectedGPU.cpp  Session.cpp  Session.h  WebsocketServer.cpp  WebsocketServer.h  data.sh  main.cpp
Demos/TicTacToe/: TicTacToe.pro  TicTacToeDialog.cpp  TicTacToeDialog.h  TicTacToeDialog.ui  main.cpp
Demos/Word2Vec/: StanfordSentimentDataset.h  Word2Vec.pro  Word2VecDataset.cpp  main.cpp
Docs/: conf.py  index.rst  make.bat  requirements.txt
Docs/Diagrams/: lstm_diagram.pptx
FreeWill/: ActivationFunctions.cuh  ActivationFunctions.h  CMakeLists.txt  CostFunctions.h  CostFunctionsGPU.cu  CostFunctionsGPU.h  DeviceSelection.h  FreeWill.h  FreeWill.pro  FreeWillUnitTest.cpp  FreeWillUnitTest.h  FreeWillUnitTestActivation.cpp  FreeWillUnitTestConvNet.cpp  FreeWillUnitTestModel.cpp  FreeWillUnitTestTensor.cpp  FreeWillUnitTestXOR.cpp  FullyConnectedLayer.h  FullyConnectedLayerKernelGPU.cu  FullyConnectedLayerKernelGPU.h  Global.h  GradientCheck.cpp  GradientCheck.h  Main.cpp  Model.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkLayer.h  NeuralNetworkThread.cpp  NeuralNetworkThread.h  NeuronNetworkLayer.h  Sigmoid.h  Softmax.h  StanfordSentimentDataset.cpp  Word2VecCostFunctions.h  Word2VecDataset.h  Word2VecModels.h  dialog.cpp  dialog.h  dialog.ui  main.cpp
FreeWill/Blob/: Blob.cpp  Blob.h
FreeWill/Context/: Context.h  Device.h  DeviceCPU.cpp  DeviceGPU.cpp  Ringbuffer.h  Semaphore.cpp  Semaphore.h  WorkerMessage.cpp  WorkerMessage.h
FreeWill/Model/: Model.cpp  Model.h  OperatorDescriptor.cpp  OperatorDescriptor.h  Solver.cpp  Solver.h  TensorDescriptor.cpp  TensorDescriptor.h
FreeWill/Operator/: Activation.h  ActivationDerivative.h  Convolution.h  ConvolutionDerivative.h  CrossEntropy.h  CrossEntropyLoss.h  CrossEntropyLoss_CUDA.cu  CrossEntropyLoss_CUDA.h  CrossEntropy_CUDA.cu  CrossEntropy_CUDA.h  DotProductWithBias.h  DotProductWithBiasDerivative.h  Duplicate.h  ElementwiseAdd.h  ElementwiseAdd_CUDA.cu  ElementwiseAdd_CUDA.h  ElementwiseProduct.h  FeedFromMemory.h  MaxPooling.h  MaxPoolingDerivative.h  Operator.h  ReLU.h  ReLUDerivative.h  Reshape.h  Sigmoid.h  SigmoidCrossEntropy.h  SigmoidCrossEntropyDerivative.h  SigmoidCrossEntropyLossDerivative.h  SigmoidDerivative.h  Softmax.h  SoftmaxDerivative.h  SoftmaxLogLoss.h  SoftmaxLogLossDerivative.h  SoftmaxLogLoss_CUDA.cu  SoftmaxLogLoss_CUDA.h  SoftmaxLoss_CUDA.cu  SoftmaxLoss_CUDA.h  distance.cu  distance.h
FreeWill/Tensor/: RandomNumberGenerator.cpp  RandomNumberGenerator.h  ReferenceCountedBlob.h  Shape.cpp  Shape.h  Tensor.cpp  Tensor.h
FreeWill/UnitTests/: MatrixMultiplicationUnitTest.cpp  MatrixMultiplicationUnitTests.h
FreeWillUtil/: CostDialog.cpp  CostDialog.cpp.autosave  CostDialog.h  CostDialog.ui  FreeWillUtil.pro  main.cpp
Utils/WebUI/DemoBase/: DemoBase.cpp  DemoBase.h  DemoUI.cpp  Session.h  WebsocketServer.cpp  WebsocketServer.h
Utils/WebUI/Html/: index.html
Word2Vec/: Word2Vec.pro  Word2VecDialog.cpp  Word2VecDialog.h  Word2VecDialog.ui  main.cpp
